# UNO

./: CMakeLists.txt  README.md  Uno-final_en_IN.ts  bot_player.cpp  bot_player.h  card.cpp  card.h  client_greeting.cpp  client_greeting.h  client_greeting.ui  game.cpp  game.h  greeting.cpp  greeting.h  greeting.ui  greetings.h  inputs.cpp  inputs.h  inputs.ui  main.cpp  profiledata.txt  profilemanager.cpp  profilemanager.h  profilemanager.ui  rules.cpp  rules.h  rules.ui  server_greeting.cpp  server_greeting.h  server_greeting.ui  soundclass.cpp  soundclass.h  users.cpp  users.h
libraries/: Start.txt
sounds1/: MixKit License.txt  Sound-Jay license.txt  ashamaluevmusic license.txt
